--- a/blog.html
+++ b/blog.html
@@ -220,7 +220,7 @@
     <div class="blog-container">
         <!-- Blog Post 1 -->
         <div class="blog-post">
-            <img src="images/zero.png" alt="Blog Post Image">
+            <img src="zero.png" alt="Blog Post Image">
             <h1>Zero Olympiad: The Beginning of a New Horizon</h1>
         <p>In a world faced with pressing challenges—<strong>climate change, poverty, inequality, and hunger</strong>—young minds hold the key to finding innovative and sustainable solutions. The <strong>Zero Olympiad</strong> is not just another competition; it’s a call to action. Led by <strong>Faatiha Aayat</strong>, the Olympiad serves as a <em>global platform</em> for the youth to tackle real-world problems and actively contribute to achieving the <strong>United Nations Sustainable Development Goals (SDGs)</strong>.</p>
     </section>
@@ -374,8 +374,8 @@
             <h3>Follow Us</h3>
             <div class="social-icons">
                 <a href="https://www.facebook.com/mdjesan11/"><img src="images/facebook.jpeg" alt="Facebook"></a>
-                <a href="https://youtube.com/@al-madina-tulislam8417?feature=shared"><img src="images/Youtube.png" alt="YouTube"></a>
-                <a href="https://x.com/jesananjum96156"><img src="images/x.png" alt="X"></a>
+                <a href="https://youtube.com/@al-madina-tulislam8417?feature=shared"><img src="Youtube.png" alt="YouTube"></a>
+                <a href="https://x.com/jesananjum96156"><img src="x.png" alt="X"></a>
                 <a href="https://www.instagram.com/muhammadjesanturzo/"><img src="images/Instagram.jpeg" alt="Instagram"></a>
                 <a href="https://www.linkedin.com/in/muhammad-jesan-anjum-bbb896279/"><img src="images/Linkedin.png" alt="LinkedIn"></a>
             </div>
