--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
             <h3>Follow Us</h3>
             <div class="social-icons">
                 <a href="https://www.facebook.com/mdjesan11/"><img src="images/facebook.jpeg" alt="Facebook"></a>
-                <a href="https://youtube.com/@al-madina-tulislam8417?feature=shared"><img src="youtube.png" alt="YouTube"></a>
+                <a href="https://youtube.com/@al-madina-tulislam8417?feature=shared"><img src="Youtube.png" alt="YouTube"></a>
                 <a href="https://x.com/jesananjum96156"><img src="x.png" alt="X"></a>
                 <a href="https://www.instagram.com/muhammadjesanturzo/"><img src="images/Instagram.jpeg" alt="Instagram"></a>
                 <a href="https://www.linkedin.com/in/muhammad-jesan-anjum-bbb896279/"><img src="images/Linkedin.png" alt="LinkedIn"></a>
