--- a/achievements.html
+++ b/achievements.html
@@ -236,7 +236,7 @@
                     <div class="caption">Caption for Image 13</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="images/g14.jpg" alt="Image 14">
+                    <img src="g14.jpg" alt="Image 14">
                     <div class="caption">Caption for Image 14</div>
                 </div>
                 <div class="gallery-item">
@@ -410,8 +410,8 @@
             <h3>Follow Us</h3>
             <div class="social-icons">
                 <a href="https://www.facebook.com/mdjesan11/"><img src="images/facebook.jpeg" alt="Facebook"></a>
-                <a href="https://youtube.com/@al-madina-tulislam8417?feature=shared"><img src="images/Youtube.png" alt="YouTube"></a>
-                <a href="https://x.com/jesananjum96156"><img src="images/x.png" alt="X"></a>
+                <a href="https://youtube.com/@al-madina-tulislam8417?feature=shared"><img src="Youtube.png" alt="YouTube"></a>
+                <a href="https://x.com/jesananjum96156"><img src="x.png" alt="X"></a>
                 <a href="https://www.instagram.com/muhammadjesanturzo/"><img src="images/Instagram.jpeg" alt="Instagram"></a>
                 <a href="https://www.linkedin.com/in/muhammad-jesan-anjum-bbb896279/"><img src="images/Linkedin.png" alt="LinkedIn"></a>
             </div>
