--- a/Zero.html
+++ b/Zero.html
@@ -314,7 +314,7 @@
         <p>Promote sustained, inclusive, and sustainable economic growth, full and productive employment, and decent work for all.</p>
     </div>
     <div class="sdg-card">
-        <img src="images/sdg9.png" alt="Industry, Innovation, and Infrastructure">
+        <img src="sdg9.png" alt="Industry, Innovation, and Infrastructure">
         <h3>Industry, Innovation, and Infrastructure</h3>
         <p>Build resilient infrastructure, promote inclusive and sustainable industrialization, and foster innovation.</p>
     </div>
@@ -429,8 +429,8 @@
             <h3>Follow Us</h3>
             <div class="social-icons">
                 <a href="https://www.facebook.com/mdjesan11/"><img src="images/facebook.jpeg" alt="Facebook"></a>
-                <a href="https://youtube.com/@al-madina-tulislam8417?feature=shared"><img src="images/Youtube.png" alt="YouTube"></a>
-                <a href="https://x.com/jesananjum96156"><img src="images/x.png" alt="X"></a>
+                <a href="https://youtube.com/@al-madina-tulislam8417?feature=shared"><img src="Youtube.png" alt="YouTube"></a>
+                <a href="https://x.com/jesananjum96156"><img src="x.png" alt="X"></a>
                 <a href="https://www.instagram.com/muhammadjesanturzo/"><img src="images/Instagram.jpeg" alt="Instagram"></a>
                 <a href="https://www.linkedin.com/in/muhammad-jesan-anjum-bbb896279/"><img src="images/Linkedin.png" alt="LinkedIn"></a>
             </div>
