--- a/contact.html
+++ b/contact.html
@@ -161,8 +161,8 @@
         <div class="footer-section social-icons">
             <h3>Follow Us</h3>
             <a href="https://www.facebook.com/mdjesan11"><img src="images/facebook.jpeg" alt="Facebook"></a>
-            <a href="https://youtube.com/@al-madina-tulislam8417"><img src="images/Youtube.png" alt="YouTube"></a>
-            <a href="https://x.com/jesananjum96156"><img src="images/x.png" alt="X"></a>
+            <a href="https://youtube.com/@al-madina-tulislam8417"><img src="Youtube.png" alt="YouTube"></a>
+            <a href="https://x.com/jesananjum96156"><img src="x.png" alt="X"></a>
             <a href="https://www.instagram.com/muhammadjesanturzo/"><img src="images/Instagram.jpeg" alt="Instagram"></a>
             <a href="https://www.linkedin.com/in/muhammad-jesan-anjum-bbb896279/"><img src="images/Linkedin.png" alt="LinkedIn"></a>
         </div>
