--- a/achievements.html
+++ b/achievements.html
@@ -236,7 +236,7 @@
                     <div class="caption">Caption for Image 13</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="g14.jpg" alt="Image 14">
+                    <img src="G14.jpg" alt="Image 14">
                     <div class="caption">Caption for Image 14</div>
                 </div>
                 <div class="gallery-item">
